# dareg-lab

./: LICENCE.txt  README.md  eslint.config.js  index.html  orval.config.ts  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish.yaml
docs/: deployment.plantuml
src/: App.tsx  api.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/lib/onedata/: Cargo.toml
src-tauri/lib/onedata/src/: api_calls.rs  lib.rs
src-tauri/lib/onedata/src/api_calls/: create_directory_at_path.rs  create_file_at_path.rs  remove_entry_at_path.rs  upload_file.rs
src-tauri/lib/onedata/src/types/: files.rs
src-tauri/src/: api_calls.rs  commands.rs  constants.rs  functions.rs  main.rs  types.rs  utils.rs
src-tauri/src/api_calls/: get_upload_parameters.rs
src-tauri/src/commands/: get_config_command.rs  start_upload_command.rs  stop_upload_command.rs
src-tauri/src/functions/: process_files.rs  scan_directory.rs
src-tauri/src/functions/process_files/: direcory_processors.rs  directory_processors.rs  file_processors.rs  process_files_thread.rs
src-tauri/src/functions/scan_directory/: directory_change_resolver.rs  directory_handlers.rs  file_change_resolver.rs  file_handlers.rs  scan_directory_thread.rs
src-tauri/src/types/: app.rs  events.rs  upload_parameters.rs
src-tauri/src/utils/: config.rs  files.rs
src-tauri/src/utils/files/: calculate_checksum.rs  scan_directory.rs
src/contexts/: ConfigContextProvider.tsx  (+1 more)
src/utils/: files.ts  (+2 more)
testing/: README.md  compare.py  compare.sh  main.py  run_basic_test.sh
(+61 files in other folders)
