[package]
name = "DAREG_Lab_Client"
version = "0.2.1"
description = "DAREG Lab Client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "app-all", "path-all", "dialog-open", "shell-open", "windows7-compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.12"
onedata = { path = "./lib/onedata" }
tokio = "1.39.2"
sha2 = "0.10.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
